# Projekt-JPO

./: CMakeLists.txt  README.md  RunTests.bat  Start.bat  main.cpp
API/: ApiClient.cpp  ApiClient.h  dataBase.json  index.json  measurments.json  sensors.json
Lang/: Translator.cpp  Translator.h  en.json  pl.json
MainWindow/: MainWindow.cpp  MainWindow.h
Plot/: PlotManager.cpp  PlotManager.h  tmp_plot.gp
Tests/: api_test.cpp  apiclient_test.cpp  main_test.cpp  plot_test.cpp  plotmanager_test.cpp  translator_test.cpp
docs/: Doxyfile
libs/: curl-config  dbus-env.bat  glib-gettextize  icu-config  qt-cmake-create.bat  qt-cmake-private.bat  qt-cmake.bat  qt-internal-configure-examples.bat  qt-internal-configure-tests.bat  sdl2-config
libs/qt6/QtConcurrent/: qtconcurrentversion.h
libs/qt6/QtCore/: qconfig.h  qlist.h  qrangemodel_impl.h  qstring.h  qtcore-config.h  qtcoreversion.h  qvariant.h
libs/qt6/QtCore5Compat/: qbinaryjson.h  qcore5global.h  qlinkedlist.h  qtcore5compat-config.h  qtcore5compatversion.h  qtextcodec.h
libs/qt6/QtDBus/: qtdbusversion.h
libs/qt6/QtDeviceDiscoverySupport/: qtdevicediscoverysupportversion.h
libs/qt6/QtExamplesAssetDownloader/: qtexamplesassetdownloaderversion.h
libs/qt6/QtFbSupport/: qtfbsupportversion.h
libs/qt6/QtGui/: qtgui-config.h  qtguiversion.h
libs/qt6/QtNetwork/: qtnetworkversion.h
libs/qt6/QtOpenGL/: qtopenglversion.h
libs/qt6/QtOpenGLWidgets/: qtopenglwidgetsversion.h
libs/qt6/QtPrintSupport/: qtprintsupportversion.h
libs/qt6/QtSql/: qtsqlversion.h
libs/qt6/QtSvg/: qtsvgversion.h
(+22 files in other folders)
